Approval_Processes/src/objects/Expense__c.object
<CustomObject>
    <description>Expense details</description>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <description>Amount</description>
        <inlineHelpText>fill expense amount in $.</inlineHelpText>
        <label>Expense Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <description>Type of expense</description>
        <inlineHelpText>fill expense type</inlineHelpText>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Travelling</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of approval request</description>
        <inlineHelpText>set status of approval request</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>